get book by ID
